feat: add docker image
Signed-off-by: Bart Jaskulski <bjaskulski@protonmail.com>

--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,20 @@ XAI_API_KEY=****
 # Instructions to create a Vercel Blob Store here: https://vercel.com/docs/storage/vercel-blob
 BLOB_READ_WRITE_TOKEN=****
 
-# Instructions to create a PostgreSQL database here: https://vercel.com/docs/storage/vercel-postgres/quickstart
-POSTGRES_URL=****
-
-
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
 REDIS_URL=****
+#
+# Docker PostgreSQL setup
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=ai_chatbot
+POSTGRES_PORT=5432
+
+# For Docker - if running locally, use this format:
+# DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/${POSTGRES_DB}
+# For Docker Compose use:
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}
+
+# Next Auth
+NEXTAUTH_URL=http://localhost:3000
