--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.36.7",
+    "@libsql/client": "^0.15.4",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
@@ -49,18 +50,17 @@
     "date-fns": "^4.1.0",
     "diff-match-patch": "^1.0.5",
     "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.41.0",
+    "drizzle-orm": "^0.43.1",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^12.10.5",
     "geist": "^1.4.2",
-    "lucide-react": "^0.485.0",
+    "lucide-react": "^0.509.0",
     "nanoid": "^5.1.5",
     "next": "^15.3.2",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "orderedmap": "^2.1.1",
     "papaparse": "^5.5.2",
-    "postgres": "^3.4.5",
     "prosemirror-example-setup": "^1.2.3",
     "prosemirror-inputrules": "^1.5.0",
     "prosemirror-markdown": "^1.13.2",
@@ -70,7 +70,7 @@
     "prosemirror-state": "^1.4.3",
     "prosemirror-view": "^1.39.2",
     "react": "^19.1.0",
-    "react-data-grid": "7.0.0-beta.51",
+    "react-data-grid": "7.0.0-beta.52",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.9",
@@ -95,7 +95,7 @@
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
-    "drizzle-kit": "^0.30.6",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9.26.0",
     "eslint-config-next": "15.2.4",
     "eslint-config-prettier": "^10.1.5",
